fix too small rem sizing

--- a/src/styles/partials/_type.scss
+++ b/src/styles/partials/_type.scss
@@ -26,8 +26,3 @@ h2 {
     font-size: 14px;
   }
 }
-@media (max-width: $smscreen) {
-  html {
-    font-size: 12px;
-  }
-}
